# job_agent

./: .gitignore  CLAUDE.md  pyproject.toml
config/: keywords.yaml  profile.yaml  sources.yaml
docs/: USAGE.md
docs/adr/: 001-source-strategy.md  002-stage1-sources-and-db.md  003-ranking-approach.md  004-network-match-approach.md  005-generation-approach.md
notebooks/: 01_pipeline_overview.ipynb  02_rank_inspect.ipynb  03_match_inspect.ipynb  04_generation_review.ipynb
skills/: cv-tailoring.skill
src/: db.py  generate.py  llm.py  match.py  normalize.py  queue.py  rank.py
src/sources/: adzuna.py  arbeitnow.py  ashby.py  base.py  greenhouse.py  hiremetech.py  lever.py  remotive.py  run.py
tests/: test_generate.py  test_llm.py  test_match.py  test_normalize.py  test_queue.py  test_rank.py  test_sources.py
tests/fixtures/: ashby_aidoc.json  greenhouse_apple.json  lever_waze.json
