[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2",
    "sqlalchemy>=2",
    "pyyaml",
    "httpx",
    "python-dotenv",
    "rapidfuzz",   # fuzzy company-name matching in Stage 3
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "mypy", "pytest-httpx"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20260518",
]
